# openoptimizer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  build.bat  openapi.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml
crates/optimizer-api/: Cargo.toml
crates/optimizer-api/src/: main.rs
crates/optimizer-cli/: Cargo.toml
crates/optimizer-cli/src/: main.rs
crates/optimizer-core/: Cargo.toml
crates/optimizer-core/src/: lib.rs  types.rs
crates/optimizer-core/src/optimizer/: layout.rs  mod.rs  optional.rs  summary.rs  tests.rs
examples/: complex.json  furniture.yaml  simple.yaml
web/: index.html
