[workspace]
members = [
    "crates/optimizer-core",
    "crates/optimizer-api",
    "crates/optimizer-cli",
]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2021"
authors = ["Marcel Maier <marcel99maier@gmail.com>"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
