[package]
name = "optimizer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "optimizer"
path = "src/main.rs"

[dependencies]
optimizer-core = { path = "../optimizer-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2.1"
